# mlops-llm-crypto-predictor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
deployments/dev/candles/: candles.yaml
deployments/dev/kind/: create_cluster.sh  install_kafka.sh  kind-with-portmapping.yaml
deployments/dev/kind/manifests/: kafka-e11b.yaml  kafka-ui-all-in-one.yaml  risingwave-values.yaml
deployments/dev/trades/: trades.yaml
deployments/prod/candles/: candles.yaml
deployments/prod/trades/: trades.yaml
docker/: Dockerfile  readme_docker.md  trades.Dockerfile
services/candles/: pyproject.toml
services/candles/src/candles/: config.py  main.py
services/trades/: pyproject.toml
services/trades/src/trades/: config.py  kraken_api.py  main.py
